# kafka-avro-library

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  docker-compose.yml  pull_request_template.md  pyproject.toml  setup.cfg  sonar-project.properties
kafka_avro_library/: consumer.py  exceptions.py  message.py  message_header.py  producer.py  utils.py
tests/integration/: __init__.py  conftest_local.py  docker_compose_operations.py  test_kafka_integration_avro.py
tests/resources/: avro.config
tests/resources/schema/value/: user_schema.avsc
tests/unit/: test_ccloud_lib.py  test_consumer.py  test_kafka_message.py  test_kafka_message_header.py  test_producer.py  utils.py
